--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "nativescript-snackbar",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A NativeScript plugin providing the Material Design SnackBar.",
   "main": "index.js",
   "nativescript": {
     "platforms": {
+      "ios": "1.5.0",
       "android": "1.5.0"
     }
   },
