--- a/package.json
+++ b/package.json
@@ -22,14 +22,19 @@
     "ios",
     "bradmartin",
     "Thorum",
-    "sitefintysteve"
+    "sitefintysteve",
+    "NathanaelA"
   ],
   "author": "Brad Martin <bradmartin0905@gmail.com> (https://github.com/bradmartin)",
    "contributors": [{
-    "name": "Steve McNiven-Scott",
-    "email": "steve@sitefinitysteve.com",
-    "url": "https://github.com/sitefinitysteve" 
-  }],
+        "name": "Steve McNiven-Scott",
+        "email": "steve@sitefinitysteve.com",
+        "url": "https://github.com/sitefinitysteve" 
+    },
+    {
+        "name": "Nathanael Anderson",
+        "url": "https://github.com/NathanaelA" 
+    }],
   "license": "Apache-2.0",
   "bugs": "https://github.com/bradmartin/nativescript-snackbar/issues",
   "homepage": "https://github.com/bradmartin/nativescript-snackbar"
