--- a/platforms/android/include.gradle
+++ b/platforms/android/include.gradle
@@ -8,5 +8,11 @@ android {
 
 //optional elements
 dependencies {
-     compile 'com.android.support:design:23.1.1'
+	 def suppotVer = "22.2.0";
+
+      if(project.hasProperty("supportVersion")) {
+       suppotVer = supportVersion
+      }
+
+     compile "com.android.support:design:$suppotVer"
 }
