--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nativescript-snackbar",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "A NativeScript plugin providing the Material Design SnackBar.",
-  "main": "index.js",
+  "main": "snackbar.js",
   "nativescript": {
     "platforms": {
       "ios": "1.5.0",
@@ -15,8 +15,8 @@
   },
   "keywords": [
     "NativeScript",
-    "native",
-    "script",
+    "JavaScript",
+    "TypeScript",
     "snackbar",
     "android",
     "ios",
