--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-snackbar",
-  "version": "1.1.3",
+  "version": "1.1.4",
   "description": "A NativeScript plugin providing the Material Design SnackBar.",
   "main": "snackbar.js",
   "typings": "index.d.ts",
@@ -43,6 +43,11 @@
       "name": "Marc Buils",
       "email": "marc.buils@marcbuils.fr",
       "url": "http://www.marcbuils.fr/"
+    },
+    {
+      "name": "Rob Laverty",
+      "email": "roblav96@gmail.com",
+      "url": "https://github.com/roblav96"
     }
   ],
   "license": "Apache-2.0",
