--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nativescript-snackbar",
-  "version": "1.1.4",
+  "version": "1.1.5",
   "description": "A NativeScript plugin providing the Material Design SnackBar.",
-  "main": "snackbar.js",
+  "main": "snackbar",
   "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
