--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-snackbar",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "description": "A NativeScript plugin providing the Material Design SnackBar.",
   "main": "snackbar",
   "typings": "index.d.ts",
@@ -65,6 +65,8 @@
   "devDependencies": {
     "husky": "^0.13.4",
     "lint-staged": "^3.6.1",
-    "prettier": "^1.4.4"
+    "prettier": "^1.4.4",
+    "tns-platform-declarations": ">=3.0.0",
+    "typescript": "^2.3.0"
   }
 }
