Allow buttonless snackbar on iOS as well

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-﻿*.js
+﻿.idea
+*.js
 *.js.map
 *.log
 !scripts/*.js
-demo/app/*.js
 demo/*.d.ts
 demo/lib
 demo/platforms
-demo/node_modules
 node_modules
