--- a/demo/package.json
+++ b/demo/package.json
@@ -2,23 +2,23 @@
   "nativescript": {
     "id": "org.nativescript.snackbar",
     "tns-ios": {
-      "version": "2.1.1"
+      "version": "3.2.0"
     },
     "tns-android": {
-      "version": "3.1.1"
+      "version": "3.2.0"
     }
   },
   "dependencies": {
     "nativescript-snackbar": "file:..",
-    "tns-core-modules": "latest"
+    "tns-core-modules": "^3.2.0"
   },
   "devDependencies": {
-    "babel-traverse": "6.7.6",
-    "babel-types": "6.7.7",
-    "babylon": "6.7.0",
+    "babel-traverse": "6.12.0",
+    "babel-types": "6.11.1",
+    "babylon": "6.8.4",
     "filewalker": "0.1.2",
     "lazy": "1.0.11",
-    "nativescript-dev-typescript": "^0.3.2",
-    "typescript": "^1.8.10"
+    "nativescript-dev-typescript": "libs",
+    "typescript": "~2.3.0"
   }
 }
