--- a/demo/package.json
+++ b/demo/package.json
@@ -2,15 +2,15 @@
   "nativescript": {
     "id": "org.nativescript.snackbar",
     "tns-ios": {
-      "version": "3.2.0"
+      "version": "3.4.1"
     },
     "tns-android": {
-      "version": "3.2.0"
+      "version": "3.4.1"
     }
   },
   "dependencies": {
     "nativescript-snackbar": "file:..",
-    "tns-core-modules": "^3.2.0"
+    "tns-core-modules": "~3.4.0"
   },
   "devDependencies": {
     "babel-traverse": "6.12.0",
@@ -19,6 +19,6 @@
     "filewalker": "0.1.2",
     "lazy": "1.0.11",
     "nativescript-dev-typescript": "libs",
-    "typescript": "~2.3.0"
+    "typescript": "~2.6.0"
   }
 }
