--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,16 +1,17 @@
 {
-    "compilerOptions": {
-        "target": "es5",
-        "module": "commonjs",
-        "removeComments": true,
-        "experimentalDecorators": true,
-        "sourceMap": true,
-        "noEmitHelpers": true
-    },
-    "files": [
-        "demo/node_modules/tns-core-modules/tns-core-modules.d.ts",
-        "snackbar.android.ts",
-        "snackbar.ios.ts"
-    ],
-    "compileOnSave": false
+  "compilerOptions": {
+    "target": "es5",
+    "module": "commonjs",
+    "removeComments": true,
+    "experimentalDecorators": true,
+    "sourceMap": true,
+    "noEmitHelpers": true,
+    "noEmitOnError": false
+  },
+  "files": [
+    "demo/node_modules/tns-core-modules/tns-core-modules.d.ts",
+    "snackbar.android.ts",
+    "snackbar.ios.ts"
+  ],
+  "compileOnSave": false
 }
