--- a/demo/package.json
+++ b/demo/package.json
@@ -1,16 +1,13 @@
 {
   "nativescript": {
     "id": "org.nativescript.snackbar",
-    "tns-ios": {
-      "version": "3.4.1"
-    },
     "tns-android": {
-      "version": "3.4.1"
+      "version": "4.0.1"
     }
   },
   "dependencies": {
     "nativescript-snackbar": "../src",
-    "tns-core-modules": "~3.4.0"
+    "tns-core-modules": "^4.0.0"
   },
   "devDependencies": {
     "babel-traverse": "6.12.0",
@@ -18,7 +15,7 @@
     "babylon": "6.8.4",
     "filewalker": "0.1.2",
     "lazy": "1.0.11",
-    "nativescript-dev-typescript": "libs",
+    "nativescript-dev-typescript": "0.7.1",
     "typescript": "~2.6.0"
   }
 }
