--- a/src/package.json
+++ b/src/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nativescript-snackbar",
-  "version": "3.2.0",
-  "description": "A NativeScript plugin providing the Material Design SnackBar.",
+  "version": "4.0.0",
+  "description": "A NativeScript plugin for the Material Design SnackBar.",
   "main": "snackbar",
   "typings": "index.d.ts",
   "nativescript": {
@@ -28,13 +28,14 @@
     "demo.ios": "npm i && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
     "demo.android": "npm i && npm run tsc && cd ../demo && tns run android --syncAllFiles",
     "demo.reset": "cd ../demo && rimraf platforms",
+    "generate.typings.ios": "cd ../demo && TNS_DEBUG_METADATA_PATH=\"$(pwd)/metadata\" tns build ios && TNS_TYPESCRIPT_DECLARATIONS_PATH=\"$(pwd)/typings\" tns build ios && echo 'Now look for your library typings in demo/typings!'",
     "plugin.prepare": "npm run build && cd ../demo && tns plugin remove nativescript-snackbar && tns plugin add ../src",
     "clean": "cd ../demo && rimraf hooks node_modules platforms && cd ../src && rimraf node_modules && npm run plugin.link",
     "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'",
     "prepack": "npm run build.native"
   },
   "lint-staged": {
-    "*.ts": [
+    "*.{ts, js, json, css, scss, md}": [
       "prettier --write",
       "git add"
     ]
@@ -91,11 +92,11 @@
   "bugs": "https://github.com/bradmartin/nativescript-snackbar/issues",
   "homepage": "https://github.com/bradmartin/nativescript-snackbar",
   "devDependencies": {
-    "husky": "^0.14.3",
-    "lint-staged": "^7.2.2",
-    "prettier": "^1.14.2",
-    "tns-core-modules": "^4.2.0",
-    "tns-platform-declarations": "^4.2.0",
+    "husky": "^1.1.4",
+    "lint-staged": "^8.0.4",
+    "prettier": "^1.15.2",
+    "tns-core-modules": "^5.0.2",
+    "tns-platform-declarations": "^5.0.2",
     "typescript": "~2.8.2",
     "prompt": "^1.0.0",
     "rimraf": "^2.5.0",
