--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,24 +2,27 @@
   "compilerOptions": {
     "target": "es5",
     "module": "commonjs",
+    "moduleResolution": "node",
     "removeComments": true,
+    "declaration": false,
     "experimentalDecorators": true,
     "sourceMap": true,
-    "noEmitHelpers": true,
-    "noEmitOnError": false,
-    "declaration": false,
+    "skipLibCheck": true,
     "noLib": false,
-    "emitDecoratorMetadata": true,
-    "lib": ["es6", "dom"],
-    "pretty": true,
+    "noEmitHelpers": true,
     "allowUnreachableCode": false,
     "allowUnusedLabels": false,
+    "noEmitOnError": false,
     "noImplicitAny": false,
     "noImplicitReturns": true,
     "noImplicitUseStrict": false,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "lib": ["es6", "dom"],
+    "baseUrl": ".",
+    "paths": {
+      "*": ["./node_modules/tns-core-modules/*", "./node_modules/*"]
+    }
   },
-  "exclude": ["node_modules"],
-  "files": ["snackbar.android.ts", "snackbar.ios.ts"],
+  "exclude": ["node_modules", "platforms"],
   "compileOnSave": false
 }
