--- a/demo/package.json
+++ b/demo/package.json
@@ -2,12 +2,12 @@
   "nativescript": {
     "id": "org.nativescript.snackbar",
     "tns-android": {
-      "version": "4.0.1"
+      "version": "5.0.0"
     }
   },
   "dependencies": {
-    "nativescript-snackbar": "../src",
-    "tns-core-modules": "^4.0.0"
+    "nativescript-snackbar": "file:../src",
+    "tns-core-modules": "^5.0.2"
   },
   "devDependencies": {
     "babel-traverse": "6.12.0",
@@ -15,7 +15,7 @@
     "babylon": "6.8.4",
     "filewalker": "0.1.2",
     "lazy": "1.0.11",
-    "nativescript-dev-typescript": "0.7.1",
-    "typescript": "~2.6.0"
+    "nativescript-dev-typescript": "0.7.5",
+    "typescript": "~2.8.2"
   }
 }
