--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,40 @@
-﻿.idea
-*.js
-*.js.map
-*.log
-!scripts/*.js
-!src/scripts/*.js
-demo/*.d.ts
-demo/lib
-demo/platforms
-node_modules
+﻿# Demo application build files
+demo/platforms/*
+demo/lib/*
 
 *.DS_Store
 
+src/*.js
+/*.js
+demo/app/**.js
+demo/node_modules/
+node_modules/
+
+.vscode
+.idea
+demo/.DS_Store
+demo/app/.DS_Store
+.DS_Store
+.npmrc
+*.js
+*.js.map
+*.log
+src/*.d.ts
+!src/index.d.ts
+!src/references.d.ts
+!src/scripts/*.js
+!seed-tests/*.js
+seed-tests/seed-copy/**/*.*
+seed-tests/seed-copy-new-git-repo/**/*.*
+!demo/karma.conf.js
+!demo/app/tests/*.js
+demo/*.d.ts
+!demo/references.d.ts
+demo/lib
+demo/platforms
+node_modules
+publish/src
+publish/package
+demo/report/report.html
+demo/report/stats.json
+!demo/webpack.config.js
