--- a/demo/package.json
+++ b/demo/package.json
@@ -2,20 +2,29 @@
   "nativescript": {
     "id": "org.nativescript.snackbar",
     "tns-android": {
-      "version": "5.0.0"
+      "version": "5.2.1"
     }
   },
   "dependencies": {
     "nativescript-snackbar": "file:../src",
-    "tns-core-modules": "^5.0.2"
+    "nativescript-theme-core": "^1.0.4",
+    "nativescript-unit-test-runner": "^0.5.0",
+    "tns-core-modules": "^5.2.2"
   },
   "devDependencies": {
-    "babel-traverse": "6.12.0",
-    "babel-types": "6.11.1",
-    "babylon": "6.8.4",
-    "filewalker": "0.1.2",
-    "lazy": "1.0.11",
-    "nativescript-dev-typescript": "0.7.5",
-    "typescript": "~2.8.2"
+    "jasmine-core": "^2.5.2",
+    "karma": "^1.3.0",
+    "karma-jasmine": "^1.0.2",
+    "karma-nativescript-launcher": "^0.4.0",
+    "nativescript-css-loader": "~0.26.0",
+    "nativescript-dev-typescript": "~0.8.0",
+    "nativescript-dev-webpack": "^0.20.2",
+    "tns-platform-declarations": "^5.2.2",
+    "tslint": "~5.13.1",
+    "typescript": "~3.1.6"
+  },
+  "scripts": {
+    "build.plugin": "cd ../src && npm run build",
+    "ci.tslint": "npm i && tslint --config '../tslint.json' 'app/**/*.ts' --exclude '**/node_modules/**' --exclude '**/platforms/**'"
   }
 }
