--- a/src/package.json
+++ b/src/package.json
@@ -15,23 +15,18 @@
     "url": "https://github.com/bradmartin/nativescript-snackbar"
   },
   "scripts": {
-    "precommit": "lint-staged",
     "tsc": "tsc -skipLibCheck",
-    "build": "npm i && tsc && npm run build.native",
-    "build.native": "node scripts/build-native.js",
-    "postclone": "npm i && node scripts/postclone.js && cd ../demo && npm i && cd ../src && npm run plugin.link",
+    "build": "npm i && tsc",
     "test.android": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build android && tns test android --justlaunch",
     "test.ios": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build ios && tns test ios --justlaunch",
-    "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
-    "plugin.link": "npm link && cd ../demo && npm link nativescript-snackbar && cd ../src",
+    "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\" --exclude \"*demo*/platforms/**\"",
+    "plugin.link": "npm link && cd ../demo && npm link nativescript-geolocation && cd ../src",
     "plugin.tscwatch": "npm run tsc -- -w",
     "demo.ios": "npm i && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
     "demo.android": "npm i && npm run tsc && cd ../demo && tns run android --syncAllFiles",
-    "demo.reset": "cd ../demo && rimraf platforms",
-    "generate.typings.ios": "cd ../demo && TNS_DEBUG_METADATA_PATH=\"$(pwd)/metadata\" tns build ios && TNS_TYPESCRIPT_DECLARATIONS_PATH=\"$(pwd)/typings\" tns build ios && echo 'Now look for your library typings in demo/typings!'",
-    "plugin.prepare": "npm run build && cd ../demo && tns plugin remove nativescript-snackbar && tns plugin add ../src",
-    "clean": "cd ../demo && rimraf hooks node_modules platforms && cd ../src && rimraf node_modules && npm run plugin.link",
     "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'",
+    "precommit": "lint-staged",
+    "generate.typings.ios": "cd ../demo && TNS_DEBUG_METADATA_PATH=\"$(pwd)/metadata\" tns build ios && TNS_TYPESCRIPT_DECLARATIONS_PATH=\"$(pwd)/typings\" tns build ios && echo 'Now look for your library typings in demo/typings!'",
     "prepack": "npm run build.native",
     "make-changelog": "cd ../ && github_changelog_generator -u bradmartin -p nativescript-snackbar"
   },
@@ -93,12 +88,12 @@
   "bugs": "https://github.com/bradmartin/nativescript-snackbar/issues",
   "homepage": "https://github.com/bradmartin/nativescript-snackbar",
   "devDependencies": {
-    "husky": "^1.1.4",
-    "lint-staged": "^8.0.4",
-    "prettier": "^1.15.2",
-    "tns-core-modules": "^5.0.2",
-    "tns-platform-declarations": "^5.0.2",
-    "typescript": "~2.8.2",
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.5",
+    "prettier": "^1.16.4",
+    "tns-core-modules": "^5.2.2",
+    "tns-platform-declarations": "^5.2.2",
+    "typescript": "~3.1.6",
     "prompt": "^1.0.0",
     "rimraf": "^2.5.0",
     "tslint": "^5.11.0",
