--- a/.travis.yml
+++ b/.travis.yml
@@ -1,32 +1,27 @@
 branches:
   only:
     - master
+
+stages:
+  - lint
+  - build core
+  - webpack core
+  - tests
 matrix:
   include:
-    - stage: 'Lint'
+    # Lint
+    - stage: lint
       language: node_js
       os: linux
-      node_js: '8'
-      script: cd src && npm run ci.tslint && cd ../demo && npm run ci.tslint
-    - stage: 'Build webpack and Test'
-      os: osx
+      node_js: "8"
+      script:
+        - cd src && npm run ci.tslint
+        - cd ../demo && npm run ci.tslint
+    # Build Core App
+    - stage: build core
+      os: linux
       env:
-        - Webpack="iOS"
-      osx_image: xcode10.0
-      language: node_js
-      node_js: '8'
-      jdk: oraclejdk8
-      script: cd demo && npm run build.plugin && npm i && tns build ios --bundle --env.uglify
-    - os: linux
-      language: android
-      env:
-        - Webpack="Android"
-      jdk: oraclejdk8
-      before_install: nvm install 8.11.4
-      script: cd demo && npm run build.plugin && npm i && tns build android --bundle --env.uglify --env.snapshot
-    - os: linux
-      env:
-        - BuildAndroid="28"
+        - OS="Android28"
       language: android
       jdk: oraclejdk8
       before_install: nvm install 8.11.4
@@ -34,20 +29,43 @@ matrix:
         - cd src && npm i && npm run tsc && cd ../demo && tns build android
     - os: osx
       env:
-        - BuildiOS="12.0"
+        - OS="iOS12.0"
         - Xcode="10.0"
-      osx_image: xcode10.0
+      osx_image: xcode10
       language: node_js
-      node_js: '8'
+      node_js: "8"
       jdk: oraclejdk8
       script:
-        - cd src && npm i && npm run tsc && cd ../demo && tns build ios
-    - os: linux
+        - cd src && npm i && npm run tsc
+        - cd ../demo && tns build ios
+    # Webpack Core App
+    - stage: webpack core
+      os: linux
+      language: android
+      env:
+        - OS="Android28"
+      jdk: oraclejdk8
+      before_install: nvm install 8.11.4
+      script: cd demo && npm run build.plugin && npm i && tns build android --bundle --env.uglify --env.snapshot
+    - os: osx
+      env:
+        - OS="iOS12.0"
+        - Xcode="10.0"
+      osx_image: xcode10
+      language: node_js
+      node_js: "8"
+      jdk: oraclejdk8
+      script:
+        - cd demo && npm run build.plugin
+        - npm i && tns build ios --bundle --env.uglify
+    # Tests
+    - stage: tests
+      os: linux
       language: android
       dist: precise
       jdk: oraclejdk8
       env:
-        - Android="UnitTests"
+        - OS="Android28"
       before_script:
         - echo no | android create avd --force -n test -t android-21 -b armeabi-v7a
         - emulator -avd test -no-audio -no-window &
@@ -59,11 +77,12 @@ matrix:
         - travis_wait travis_retry tns test android --justlaunch
     - os: osx
       language: node_js
-      node_js: '8'
+      node_js: "8"
       jdk: oraclejdk8
       env:
-        - iOS="UnitTests"
-      osx_image: xcode10.0
+        - OS="iOS12.0"
+        - Xcode="10.0"
+      osx_image: xcode10
       script:
         - cd src && npm i && npm run tsc && npm run tslint && cd ../demo && tns build ios
         - travis_wait travis_retry tns test ios --justlaunch
