--- a/demo-angular/package.json
+++ b/demo-angular/package.json
@@ -19,7 +19,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "nativescript-angular": "~7.2.1",
-    "nativescript-snackbar": "file:../src/nativescript-snackbar-4.1.1.tgz",
+    "nativescript-snackbar": "file:../src",
     "nativescript-theme-core": "~1.0.4",
     "reflect-metadata": "~0.1.12",
     "rxjs": "~6.3.0",
