--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,7 @@ matrix:
       os: linux
       env:
         - OS="Android28"
+        - Type="Core_Build"
       language: android
       jdk: oraclejdk8
       before_install: nvm install 8.11.4
@@ -32,6 +33,7 @@ matrix:
       env:
         - OS="iOS12.0"
         - Xcode="10.1"
+        - Type="Core_Build"
       osx_image: xcode10.1
       language: node_js
       node_js: '8'
@@ -44,6 +46,7 @@ matrix:
       language: android
       env:
         - OS="Android28"
+        - Type="Core_Webpack"
       jdk: oraclejdk8
       before_install: nvm install 8.11.4
       script:
@@ -54,6 +57,7 @@ matrix:
       env:
         - OS="iOS12.0"
         - Xcode="10.1"
+        - Type="Core_Webpack"
       osx_image: xcode10.1
       language: node_js
       node_js: '8'
@@ -64,6 +68,7 @@ matrix:
       ## Android Angular Webpack
     - env:
         - OS="Android28"
+        - Type="Angular_Webpack"
       before_install: 'nvm install 8.11.4'
       jdk: oraclejdk8
       language: android
@@ -76,6 +81,7 @@ matrix:
     - env:
         - OS="iOS12.0"
         - Xcode="10.1"
+        - Type="Angular_Webpack"
       jdk: oraclejdk8
       language: node_js
       node_js: '8'
@@ -88,6 +94,7 @@ matrix:
       ## Android Vue Webpack
     - env:
         - OS="Android28"
+        - Type="Vue_Webpack"
       before_install: 'nvm install 8.11.4'
       jdk: oraclejdk8
       language: android
@@ -99,6 +106,7 @@ matrix:
     - env:
         - OS="iOS12.0"
         - Xcode="10.1"
+        - Type="Vue_Webpack"
       jdk: oraclejdk8
       language: node_js
       node_js: '8'
@@ -114,6 +122,7 @@ matrix:
       jdk: oraclejdk8
       env:
         - OS="Android28"
+        - Type="Test"
       before_script:
         - echo no | android create avd --force -n test -t android-21 -b armeabi-v7a
         - emulator -avd test -no-audio -no-window &
@@ -131,6 +140,7 @@ matrix:
       env:
         - OS="iOS12.0"
         - Xcode="10.1"
+        - Type="Test"
       osx_image: xcode10.1
       script:
         - cd src && npm i && npm run tsc && npm run tslint && cd ../demo && tns build ios
