--- a/demo/package.json
+++ b/demo/package.json
@@ -2,26 +2,29 @@
   "nativescript": {
     "id": "org.nativescript.snackbar",
     "tns-android": {
-      "version": "5.2.1"
+      "version": "6.0.0-rc-2019-06-27-172817-03"
+    },
+    "tns-ios": {
+      "version": "6.0.0-rc-2019-06-28-105002-01"
     }
   },
   "dependencies": {
     "nativescript-snackbar": "file:../src",
     "nativescript-theme-core": "^1.0.4",
-    "nativescript-unit-test-runner": "^0.5.0",
-    "tns-core-modules": "^5.2.2"
+    "nativescript-unit-test-runner": "0.6.3",
+    "tns-core-modules": "6.0.0-rc-2019-06-28-175837-02"
   },
   "devDependencies": {
     "jasmine-core": "^2.5.2",
-    "karma": "^1.3.0",
-    "karma-jasmine": "^1.0.2",
+    "karma": "4.1.0",
+    "karma-jasmine": "2.0.1",
     "karma-nativescript-launcher": "^0.4.0",
     "nativescript-css-loader": "~0.26.0",
-    "nativescript-dev-typescript": "~0.8.0",
-    "nativescript-dev-webpack": "^0.20.2",
-    "tns-platform-declarations": "^5.2.2",
+    "nativescript-dev-webpack": "1.0.0-rc-2019-07-02-161545-02",
+    "tns-platform-declarations": "6.0.0-rc-2019-06-28-175837-02",
     "tslint": "~5.13.1",
-    "typescript": "~3.1.6"
+    "typescript": "3.4.1",
+    "karma-webpack": "3.0.5"
   },
   "scripts": {
     "build.plugin": "cd ../src && npm run build",
