--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nativescript-snackbar",
-  "version": "4.1.2",
+  "version": "6.0.0",
   "description": "A NativeScript plugin for the Material Design SnackBar.",
   "main": "snackbar",
   "typings": "index.d.ts",
@@ -32,10 +32,16 @@
     "make-changelog": "cd ../ && github_changelog_generator -u bradmartin -p nativescript-snackbar"
   },
   "lint-staged": {
-    "*.{ts, js, json, css, scss, md}": [
+    "**/*.{js, css, ts, json, scss, html, xml, md}": [
       "prettier --write",
       "git add"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged",
+      "pre-push": "npm run tslint"
+    }
   },
   "keywords": [
     "NativeScript",
@@ -89,15 +95,15 @@
   "bugs": "https://github.com/bradmartin/nativescript-snackbar/issues",
   "homepage": "https://github.com/bradmartin/nativescript-snackbar",
   "devDependencies": {
-    "husky": "^1.3.1",
-    "lint-staged": "^8.1.5",
-    "prettier": "^1.16.4",
-    "tns-core-modules": "^5.2.2",
-    "tns-platform-declarations": "^5.2.2",
-    "typescript": "~3.1.6",
+    "husky": "^3.0.0",
+    "lint-staged": "^9.1.0",
+    "prettier": "^1.18.2",
+    "tns-core-modules": "^5.4.3",
+    "tns-platform-declarations": "androidx",
+    "typescript": "~3.4.5",
     "prompt": "^1.0.0",
     "rimraf": "^2.5.0",
-    "tslint": "^5.11.0",
-    "semver": "^5.5.0"
+    "tslint": "^5.18.0",
+    "semver": "^6.2.0"
   }
 }
