--- a/demo/package.json
+++ b/demo/package.json
@@ -2,17 +2,14 @@
   "nativescript": {
     "id": "org.nativescript.snackbar",
     "tns-android": {
-      "version": "6.0.0-rc-2019-06-27-172817-03"
-    },
-    "tns-ios": {
-      "version": "6.0.0-rc-2019-06-28-105002-01"
+      "version": "6.0.0"
     }
   },
   "dependencies": {
     "nativescript-snackbar": "file:../src",
-    "nativescript-theme-core": "^1.0.4",
-    "nativescript-unit-test-runner": "0.6.3",
-    "tns-core-modules": "6.0.0-rc-2019-06-28-175837-02"
+    "nativescript-theme-core": "^1.0.6",
+    "nativescript-unit-test-runner": "0.6.4",
+    "tns-core-modules": "6.0.1"
   },
   "devDependencies": {
     "jasmine-core": "^2.5.2",
@@ -20,11 +17,11 @@
     "karma-jasmine": "2.0.1",
     "karma-nativescript-launcher": "^0.4.0",
     "nativescript-css-loader": "~0.26.0",
-    "nativescript-dev-webpack": "1.0.0-rc-2019-07-02-161545-02",
-    "tns-platform-declarations": "6.0.0-rc-2019-06-28-175837-02",
-    "tslint": "~5.13.1",
-    "typescript": "3.4.1",
-    "karma-webpack": "3.0.5"
+    "nativescript-dev-webpack": "1.0.0",
+    "tns-platform-declarations": "6.0.1",
+    "tslint": "~5.18.0",
+    "karma-webpack": "3.0.5",
+    "typescript": "3.4.1"
   },
   "scripts": {
     "build.plugin": "cd ../src && npm run build",
