--- a/demo/tsconfig.json
+++ b/demo/tsconfig.json
@@ -1,17 +1,17 @@
 {
-    "compilerOptions": {
-      "module": "commonjs",
-      "target": "es5",
-      "experimentalDecorators": true,
-      "emitDecoratorMetadata": true,
-      "noEmitHelpers": true,
-      "noEmitOnError": false,
-      "lib": ["es6", "dom"],
-      "baseUrl": ".",
-      "paths": {
-        "~/*": ["app/*"]
-      }
-    },
-    "exclude": ["node_modules", "platforms", "../src/node_modules"]
-  }
-  
+  "compilerOptions": {
+    "module": "commonjs",
+    "target": "es5",
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "skipLibCheck": true,
+    "noEmitHelpers": true,
+    "noEmitOnError": false,
+    "lib": ["es6", "dom"],
+    "baseUrl": ".",
+    "paths": {
+      "~/*": ["app/*"]
+    }
+  },
+  "exclude": ["node_modules", "platforms", "../src/node_modules"]
+}
